# arrayx

./: .gitignore  README.md
arrayx/: CMakeLists.txt  array.cpp  array.h  backend.cpp  backend.h  main.cpp  utils.h
arrayx/array/: array.cpp  array.h  backend.cpp  backend.h
arrayx/core/: allocator.h  array.cpp  array.h  buffer.h  device.h  dtype.h  exceptions.h  id.h  iter.h  lazy.cpp  lazy.h  lazy_array.cpp  lazy_array.h  lazy_iter.h  range.h  shape.h
arrayx/device/: allocator.h  buffer.h  device.h  device_context.h  device_manager.cpp  device_manager.h
arrayx/device/metal/: mtl_allocator.h  mtl_context.cpp  mtl_context.h  mtl_kernel.h
arrayx/devices/: allocator.h  buffer.h  device.h  device_context.h  device_manager.cpp  device_manager.h
arrayx/devices/metal/: mtl_allocator.h  mtl_context.cpp  mtl_context.h  mtl_kernel.h
arrayx/graph/: compute_graph.cpp  compute_graph.h  compute_primitive.h  ops.cpp  ops.h
arrayx/graph/metal/: mtl_graph.h  mtl_kernel.h
arrayx/nn/: jit.h  module.h  nn.h  optim.h
arrayx/python/: array.cpp  array.h  bind.cpp  bind.h  module.h  nn.h  optim.h
arrayx/runtime/: allocator.h  buffer.h  runner.cpp  runner.h  runner_context.h
arrayx/runtime/metal/: mtl_binary.cpp  mtl_command_encoder.h  mtl_context.cpp  mtl_context.h  mtl_copy.cpp  mtl_initializers.cpp  mtl_kernel.h  mtl_matmul.cpp  mtl_reduce.cpp  mtl_runner.cpp  mtl_runner.h  mtl_unary.cpp
arrayx/runtime/metal/kernels/: CMakeLists.txt  arg_reduce.metal  binary.metal  copy.metal  initializers.metal  matmul.metal  reduce.metal  unary.metal  utils.h  utils.metal
arrayx/runtime/metal/runner/: mtl_allocator.h  mtl_binary.cpp  mtl_command_encoder.h  mtl_context.cpp  mtl_context.h  mtl_copy.cpp  mtl_initializers.cpp  mtl_kernel.h  mtl_matmul.cpp  mtl_reduce.cpp  mtl_runner.cpp  mtl_runner.h  mtl_unary.cpp
python/: arrayx.pyi  ax.py  main.py  mnist.py
python/arrayx/core/: __init__.pyi
python/arrayx/nn/: __init__.pyi
python/arrayx/optim/: __init__.pyi
python/nn/: __init__.py
python/nn/optim/: __init__.py
python/test/: test_backprop.py  test_basic_nn.py  test_binary.py  test_initializers.py  test_matmul.py  test_reduce.py  test_transform.py
